<resources>
    <string name="app_name">NYTimesSearch</string>
    <string name="save">Save</string>
    <string name="art">art</string>
    <string name="fashion">fashion</string>
    <string name="sports">sports</string>
    <string name="set_date">Set Date</string>
    <string name="begin_date">Begin Date :</string>
    <string name="error_msg_no_internet">Not connected to internet</string>
    <string name="error_msg_timeout">The server took too long to respond</string>
    <string name="error_msg_unknown">An unexpected error occurred</string>
</resources>
