<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/dateContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="32dp">

        <TextView
            android:id="@+id/beginDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/begin_date"
            android:textSize="20sp"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/etDateSelect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:layout_marginLeft="16dp"
            android:inputType="date"
            android:hint="@string/set_date"/>

    </LinearLayout>

    <Spinner
        android:id="@+id/spinnerSort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/dateContainer"
        android:entries="@array/sort_array"
         />

    <LinearLayout
        android:id="@+id/checkbox"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="32dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/spinnerSort">
        <CheckBox android:id="@+id/checkbox_art"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/art" />
        <CheckBox android:id="@+id/checkbox_fashion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/fashion" />
        <CheckBox android:id="@+id/checkbox_sports"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sports"
            android:textSize="20sp"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/checkbox"
        android:gravity="center"
        android:text="@string/save"
        android:textStyle="bold"
        android:textSize="22sp"
        android:textColor="@color/colorBlack"
        android:background="@color/colorLightBlue" />

</RelativeLayout>